<resources>
    <string name="app_name">mobile-erp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Signup</string>
    <string name="launch_text_enterprise">Avatar Erp</string>
    <string name="feature_to_be_implemented">Comming soon</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Accounts</string>
    <string name="create_account">Create Account</string>
    <string name="name">name</string>
    <string name="name_login">account login</string>
    <string name="company_code">Company code</string>
    <string name="password">Password</string>
    <string name="server_url">Server url</string>
</resources>