<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/create_account"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/login_create_account"
            android:layout_marginVertical="4dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:textSize="12sp"
            android:textColorHint="@color/white"
            android:hint="@string/name"
            android:background="@drawable/rectangle_with_rounded_shape_blue"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/name_create_account"
            android:layout_marginVertical="4dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:textSize="12sp"
            android:background="@drawable/rectangle_with_rounded_shape_blue"
            android:textColorHint="@color/white"
            android:hint="@string/name_login"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/company_create_account"
            android:layout_marginVertical="4dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:textSize="12sp"
            android:textColorHint="@color/white"
            android:hint="@string/company_code"
            android:background="@drawable/rectangle_with_rounded_shape_blue"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/password_create_account"
            android:layout_marginVertical="4dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:background="@drawable/rectangle_with_rounded_shape_blue"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/server_create_account"
            android:layout_marginVertical="4dp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:padding="12dp"
            android:textSize="12sp"
            android:textColorHint="@color/white"
            android:hint="@string/server_url"
            android:background="@drawable/rectangle_with_rounded_shape_blue"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:id="@+id/login_create_button"
            android:layout_marginVertical="32dp"
            android:textColor="@color/white"

            android:layout_marginHorizontal="16dp"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/white"
            android:hint="@string/create_account"
            android:background="@drawable/rectangle_with_rounded_shape_blue"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</androidx.cardview.widget.CardView>