<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fomus.mobile_erp.ui.drawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_subMenuFragment2"
            app:destination="@id/subMenuFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fomus.mobile_erp.ui.drawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fomus.mobile_erp.ui.drawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/actionsScreenFragment2"
        android:name="com.fomus.mobile_erp.ui.actions.ActionsScreenFragment"
        android:label="actions_screen_fragment"
        tools:layout="@layout/actions_screen_fragment" />
    <fragment
        android:id="@+id/subMenuFragment2"
        android:name="com.fomus.mobile_erp.ui.submenu.SubMenuFragment"
        android:label="sub_menu_fragment"
        tools:layout="@layout/sub_menu_fragment" >
        <action
            android:id="@+id/action_subMenuFragment2_to_actionsScreenFragment2"
            app:destination="@id/actionsScreenFragment2" />
    </fragment>
</navigation>